refactor debug scripts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,22 @@
     {
       "type": "pwa-node",
       "request": "launch",
-      "name": "Launch Program",
-      "runtimeArgs": ["-r", "ts-node/register"],
-      "args": ["${workspaceFolder}/src"],
+      "name": "Launch via yarn",
+      "runtimeExecutable": "yarn",
+      "runtimeArgs": ["dev:debug"],
+      "skipFiles": ["<node_internals>/**"],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
+    {
+      "type": "pwa-node",
+      "request": "launch",
+      "name": "Launch via npm",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "dev:debug"],
+      "skipFiles": ["<node_internals>/**"],
       "resolveSourceMapLocations": [
         "${workspaceFolder}/**",
         "!**/node_modules/**"
