--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "dev": "ts-node src",
+    "dev:debug": "node -r ts-node/register src",
+    "build": "tsc",
+    "start": "node dist"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
