add debug current file launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,18 @@
     {
       "type": "pwa-node",
       "request": "launch",
+      "name": "Debug current file",
+      "runtimeExecutable": "node",
+      "runtimeArgs": ["-r", "ts-node/register", "${file}"],
+      "skipFiles": ["<node_internals>/**"],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
+    {
+      "type": "pwa-node",
+      "request": "launch",
       "name": "Launch via yarn",
       "runtimeExecutable": "yarn",
       "runtimeArgs": ["dev:debug"],
