--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   "files": [
     "dist"
   ],
+  "jest": {
+    "preset": "ts-jest"
+  },
   "scripts": {
     "dev": "ts-node src",
     "dev:debug": "node -r ts-node/register src",
     "build": "tsc",
-    "start": "node dist"
+    "start": "node dist",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
