--- a/.github/workflows/npm-check-updates.yml
+++ b/.github/workflows/npm-check-updates.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: lts/*
-    - run: npx npm-check-updates -u
+    - run: npx npm-check-updates -u && npm update
     
     - name: commit
       uses: stefanzweifel/git-auto-commit-action@v4
