--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "strict": true
   },
-  "include": [
-    "./src"
-  ]
+  "include": ["./src"],
+  "exclude": ["./src/**/*.test.ts"]
 }
