--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
   "files": [
     "dist"
   ],
-  "jest": {
-    "preset": "ts-jest"
-  },
   "scripts": {
     "dev": "ts-node src",
     "dev:debug": "node -r ts-node/register src",
     "build": "tsc",
     "start": "node dist",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "test": "mocha -r ts-node/register --recursive 'src/**/*.test.ts'",
+    "coverage": "nyc npm run test",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@types/jest": "^28.1.1",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.42",
-    "jest": "^28.1.1",
-    "ts-jest": "^28.0.4",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.6.2",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
