--- a/.github/workflows/npm-check-updates.yml
+++ b/.github/workflows/npm-check-updates.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: lts/*
-      - run: npx npm-check-updates -u && npm update
+      - run: npx npm-check-updates -u && npm audit fix
 
       - name: commit
         uses: stefanzweifel/git-auto-commit-action@v4
